# SPRED

./: .gitignore  CMakeLists.txt  Makefile  README.txt  doc.cfg
cmake/: FindGMP.cmake  FindMPFR.cmake
data/: meshlab_reorient.mlx  smooth-feature-noisy.off
src/: iocomplex.h  typedefs.h  urban_utils.h  vectors_reader.h
src/benchmark/: benchmark.cpp
src/complex/: complex_tools.h  reorient.h
src/complex/Reorient/src/: CMakeLists.txt  Custom_visitor_example.cpp  Reorient.h  Reorient_main.cpp
src/complex/Reorient/src/details/: Off_reader.h  Off_save_visitor.h  Primal_dual_graph.h  Triangle.h  typedefs.h
src/contraction/: CGAL_contractor.cpp  CGAL_contractor.h  CGAL_edge_length_cost.h  CGAL_middle_placement.h  Distance_to_placement_cost.h  QP_policies.h  QP_solver.h  Stats.h  Urban_valid_contraction.h
src/contraction/Lindstrom-Turk/: LindstromTurk.h  LindstromTurk_cost.h  LindstromTurk_params.h  LindstromTurk_placement.h  Lindstrom_Turk_core.h  Lindstrom_Turk_core_impl.h
src/contraction/policies/: Cached_urban.h  Current_policies.h  GH_memoryless_policies.h  GH_policies.h  Length_midpoint_policies.h  On_crease_placement.h  Simplification_policies.h  Tmp_policies.h  Urban_edge_profile.h  Urban_policies.h
src/contraction/quadric/: Error_quadric.h  Error_quadric_solver.h  Quadric_utils.h
src/geometry/: Independent_proxies.h  K_nearest_graph.h  geometry_tools.h
src/geometry/hausdorff/: Distance_point_to_triangle.h  Hausdorff_distance.h  Meshlab_hausdorff_distance.h  knn.h  refine.h
src/geometry/internal/: K_nearest_builder_distance.h  K_nearest_builder_point.h
src/gudhi/: gudhi_common.h  gudhi_complex.h  gudhi_contraction.h
src/interface/: Buffered_viewer.cpp  Buffered_viewer.h  Buffered_viewer_instructor.cpp  Buffered_viewer_instructor.h  Color.h  Contraction_parameter.h  Contractor_interface.h  Edge_collapse_strategy.h  Edge_collapse_strategy.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Menu_detect_primitive.cpp  Menu_detect_primitive.h  Menu_detect_primitive.ui  Menu_edge_collapse.cpp  Menu_edge_collapse.h  Menu_edge_collapse.ui  Menu_view_param.cpp  Menu_view_param.h  Menu_view_param.ui  Mesh_context.h  Strategy_from_string.h  View_parameter.h  Viewer.cpp  Viewer.h  Viewer_instructor.cpp  Viewer_instructor.h  ui_MainWindow.h  ui_Menu_detect_primitive.h  ui_Menu_edge_collapse.h  ui_Menu_view_param.h
src/semantic/: Corners_clusters.h  Detection_params.h  Dual_primitive_graph.h  Enriched_mesh.h  Graph_detection_params.h  Merge_proxies_params.h  Mesh_region_growing.h  NN_region_growing.h  Plane_primitive.h  Plane_primitive_border.h  Primitive.h  Primitive_graph.h  Proxy_detection.h  Region_growing_proxy_detection.h  Semantized_geometric_traits.h  SkBl_region_growing.h  Smooth_expansion.h  Smooth_proxy.h  Smooth_proxy_regions.h  io_proxies.h
src/semantic/Region_growing/src/: CMakeLists.txt  Debug_msg.h  Graph.h  Off_reader.h  Region_growing.h  Region_growing_test.cpp  point_region_growing.cpp  reg_grow_typedefs.h  region_growing.cpp
src/semantic/Region_growing/src/k_nearest/: K_nearest_graph.h  Point_with_id.h
src/semantic/code_flo/: CloudSegmentation.cpp  CloudSegmentation.h  Ply.hpp  Polyhedron_segmentation.h  Save_segmentation.h  Visualization_Tools.h  types.h
src/utils/: MClock.h  Map_with_pointers.h  Test_map_with_pointers.cpp
test/: demo_contraction.cpp  test_complex_tools.cpp  urban_collapse.cpp  urban_collapse.sh
